package src;


public class Main {

    public static void main(String[] args) {
        StreamingPlatform streamingPlatform = new StreamingPlatform();
        streamingPlatform.startMenu();
    }

}
