package src;

public class Media {
}
